--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,6 +11,7 @@
             <Setter Property="Margin" Value="10"/>
             <Setter Property="Height" Value="100"/>
             <Setter Property="Width" Value="100"/>
+            <Setter Property="Margin" Value="-45,0,0,0"/>
         </Style>
         <Style TargetType="StackPanel">
             <Setter Property="Height" Value="150"/>
@@ -18,15 +19,18 @@
     </Window.Resources>
 
     <Grid Background="#333">
+        <Label x:Name="PlayerHumanSum" Height="50" Width="100" Foreground="AliceBlue" VerticalAlignment="Bottom" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            0
+        </Label>
+        <Label x:Name="PlayerBotSum" Height="50" Width="100" Foreground="AliceBlue" VerticalAlignment="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">
+            0
+        </Label>
         <StackPanel x:Name="PlayerBotCards" HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Top">
-            <Label x:Name="PlayerBotSum" Height="50" Width="100" Foreground="AliceBlue" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
-                0
-            </Label>
+
         </StackPanel>
+        
         <StackPanel x:Name="PlayerHumanCards" HorizontalAlignment="Center" Orientation="Horizontal" VerticalAlignment="Bottom">
-            <Label x:Name="PlayerHumanSum" Height="50" Width="100" Foreground="AliceBlue" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
-                0
-            </Label>
+            
         </StackPanel>
         <Grid HorizontalAlignment="Left" VerticalAlignment="Center">
             <Image x:Name="PullCardImage" Source="img/69.gif" Margin="0"/>
